<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>igvc_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joelgeorgekal@gmail.com">kallrax</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend> 
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
